feat: honor add-opens/exports from jar manifest (#1899)